js needs to be fixed for reaching the second page and then adding and removing the overflow css property on the html

--- a/P_ID/css/main.css
+++ b/P_ID/css/main.css
@@ -4,29 +4,34 @@ html , body{
 	margin: 0;
 	padding: 0;
 }
+.noScroll{
+	overflow: hidden;
+}
 body{
 	display: none;
+	background: #ecf0f1;
+
 }
-#sect1, #sect2{
+#sect1, #sect3{
 	position: relative;
 	width: 100%;
 	height: 100%;
 	padding: 1%;
 }
+/*Section1 effects*/
 .intro{	
-	background: url(../img/img4.jpg) center no-repeat;
+	background: url(../img/img50.jpg) center no-repeat;
 		-webkit-background-size: cover;
 	  -moz-background-size: cover;
 	  -o-background-size: cover;
 	  background-size: cover;
+
 }
 #intro_text{
-
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 20%;
-	margin-bottom: 20%;
+	margin-top: 20%;	
 }
 .title_cent h1{
 	font-size: 12vw;
@@ -38,14 +43,105 @@ body{
 #intro_btnpos{
 	text-align: center;
 }
+#intro_btnpos a:focus{
+	outline: 0;
+	outline-offset: 0;
+	color: inherit;
+}
+a {
+	text-decoration: none;
+}
 
+/*intro animation*/
+.intro_animate {
+	-webkit-animation-fill-mode: both;
+    -moz-animation-fill-mode: both;
+    -ms-animation-fill-mode: both;
+    -o-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    -ms-animation-duration: 1s;
+    -o-animation-duration: 1s;
+    animation-duration: 1s;
+    animation-delay: .3s;
+    -webkit-animation-delay: .3s;
+    -moz-animation-delay: .3s;
+    -ms-animation-delay: .3s;
+    -o-animation-delay: .3s;
+}
+@-webkit-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(20px);
+    }
 
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+    };
+}
 
+@-moz-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -moz-transform: translateY(20px);
+    }
 
+    100% {
+        opacity: 1;
+        -moz-transform: translateY(0);
+    };
+}
 
+@-o-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -o-transform: translateY(20px);
+    }
 
+    100% {
+        opacity: 1;
+        -o-transform: translateY(0);
+    };
+}
 
+@keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
 
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    };
+}
+.fadeInDown{
+	-webkit-animation-name: fadeInDown;
+    -moz-animation-name: fadeInDown;
+    -o-animation-name: fadeInDown;
+    animation-name: fadeInDown;
+}
+
+/*end of animation*/
+/*end of Section1*/
+
+/*Section 2 effects*/
+
+.jumbotron{
+	margin-top: 0;
+	background: #7f8c8d;
+}
+#sect2{
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+#sect2 h1{
+	font-size: 7vw;
+	color: #ecf0f1;
+}
 
 
 
